clusters/production/apps/test-test/cilium-cluster-nodes-to-http.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cluster-nodes-to-test-http
  namespace: test-test
spec:
  endpointSelector:
    matchExpressions:
      - key: app
        operator: In
        values:
          - test-api
          - test-frontend
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
